2002-03-26 00:30
 Doc:
  - Added HTML docs, fixed bugs in SGML; thanks Bruce Momjian.
2002-03-23 05:30
 Result, TransactionItf, Transactor:
  - Several compile fixes (especially under MS Visual C++)--Clinton James
2002-03-22 02:45
 All:
  - Renamed *.cc to *.cxx for MS Visual C++, thanks Clinton James
2002-03-20 14:15
 Result:
  - Fixed to compile errors on gcc 2.96.x, thanks Vyacheslav Ignatyuk
2002-03-20 02:00
 All:
  - Renamed namespace Pg to pqxx for consistency
2002-03-20 01:30
 All:
  - Renamed library source files to match new header file names
2002-03-20 01:00
 All:
  - Great Renaming of header files (pg_*.h to pqxx/*.h)
2002-03-20 00:30
 All:
  - Moved library header files into include directory
  - Moved library source files into src directory
  - Moved test source files into test directory
 Makefile:
  - Reduced use of repetitive explicit rules
2002-03-17 01:30
 All:
  - Full test coverage!
 Cursor:
  - Full test coverage
  - Removed PostgreSQL-specific FORWARD/BACKWARD, previously labeled "ANSI"
  - Kludged BACKWARD_ALL around breakage
  - Implemented += and -=
 NonTransaction, RobustTransaction, Transaction:
  - Documented test coverage of overridables, even though they're private
 Test1:
  - More comments
 Test19:
  - Created
 Test3:
  - Improved Cursor test coverage
 TransactionItf:
  - Updated header comments
2002-03-05 17:45
 Makefile:
  - Now queries log table at end of regression test; should be empty
 Test4, Test6, Test7, Test13, Test15, Test17:
  - Recommended practice is now to use TRANSACTIONTYPE in Transactors
 Test18:
  - Created
2002-03-05 00:30
 RobustTransaction:
  - Initial implementation
 Test14:
  - Oops, tested Transaction instead of NonTransaction
 Test16:
  - Created
 Test17:
  - Created
2002-03-04 22:00
 RobustTransaction:
  - Created as outline based on Transaction
2002-03-04 00:30
 NonTransaction:
  - Created
 Test14:
  - Created
 Test15:
  - Created
 Transaction:
  - Made subclass of new abstract base class TransactionItf